--- a/css/app.css
+++ b/css/app.css
@@ -18,8 +18,8 @@ p {
 
 #mainMenu{
   position: absolute;
-  margin-left: 210px;
-  margin-top: -300px;
+  margin-left: 45%;
+  margin-top: -50%;
 }
 
 #optionsMenu{
@@ -32,7 +32,11 @@ p {
 #gameOver{
   display: none;
   position: absolute;
-  margin-left: 210px;
-  margin-top: -300px;
+  margin-left: 45%;
+  margin-top: -50%;
 }
 
+#canvas {
+  width: 100%;
+  height: 100%;
+}
