--- a/css/app.css
+++ b/css/app.css
@@ -1,11 +1,10 @@
 html, body {
   margin: 0;
-  padding: 0.5rem;
+/*   padding: 0.5rem; */
 }
 
 body {
   font-size: 1rem;
-  background: #fff;
 }
 
 h1 {
@@ -19,7 +18,7 @@ p {
 #mainMenu{
   position: absolute;
   margin-left: 45%;
-  margin-top: -50%;
+/*   margin-top: -50%; */
 }
 
 #optionsMenu{
@@ -38,5 +37,13 @@ p {
 
 #canvas {
   width: 100%;
-  height: 100%;
+  height: 400px;
+}
+
+#main {
+  background-image: url('../img/bg_main.png');
+  width: 100%;
+  height: 455px;
+  background-position: left top;
+  background-attachment: fixed;
 }
